--- a/TPStructure/tp5/Makefile
+++ b/TPStructure/tp5/Makefile
@@ -1,3 +1,6 @@
 
 All: 
-	gcc -Wall liste_doublement_chainee.c main.c liste_doublement_chainee.h -o exec
+	gcc -Wall liste_doublement_chainee.c main.c -o exec
+
+clean:
+	rm -rf *.o exec
